Irinel/authc 3632 update the publish track tab 2 (#2088)
* chore: make PageEmbedmentForm reusable

* chore: use contact-form components for help-center embed project

* fix: remove margins

* chore: connect to help center api

* fix: fix tests

* fix: comment fix

* fix: copy fixes, tests fixes

* fix: remove duplicated property

* fix: hc sdk update

* fix: add missing property

* fix: snapshot update

* fix: tests fixes

* fix: pr fixes

* fix: fix import

* chore: move utility function to shared folder
