# src/models/contactForm/types.ts
@@ -27,9 +27,7 @@ export type UpdateContactFormDto = Components.Schemas.UpdateContactFormDto
 export type UpsertContactFormAutomationSettingsDto =
     Components.Schemas.UpsertAutomationSettingsDto
 
-export type PageEmbedment = Components.Schemas.PageEmbedmentDto
-
-export type EmbeddablePage = Components.Schemas.ContactFormPageDto
+export type ContactFormPageEmbedment = Components.Schemas.PageEmbedmentDto
 
 export type CreateShopifyPageEmbedmentDto =
     Components.Schemas.CreateShopifyPageEmbedmentDto
